@@ -1,3 +1,10 @@
+Thu Jan 22 18:42:03 CET 2004 Daniel Veillard <daniel@veillard.com>
+
+	* libxslt/xslt.c: applied patch from Stefan Kost to fix
+	  behaviour on unknown element from the XSLT namespace.
+	* python/generator.py: applied patch from Stephane bidoul
+	  to export enums in the bindings.
+
 Thu Jan 22 10:35:14 HKT 2004 William Brack <wbrack@mmm.com.hk>
 
 	* tests/general/Makefile.am, tests/general/bug-141.out,
